// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z-shift-upload-form.vue should be rendered correctly 1`] = `
<form
  class="v-form"
  data-form=""
  novalidate="novalidate"
>
  <div>
    <div
      class="z-form-card-stub"
      title="一括登録（アップロード）"
    >
      <div
        class="z-form-card-stub-slot-actions"
      />
      <z-form-card-item-set-stub
        icon=""
        label=""
        noicon="true"
      >
        <p>
          勤務シフトを記入したエクセルファイルを選択し《アップロード》ボタンを押してください。
        </p>
      </z-form-card-item-set-stub>
      <z-form-card-item-set-stub
        icon="M14 2H6C4.89 2 4 2.9 4 4V20C4 21.11 4.89 22 6 22H18C19.11 22 20 21.11 20 20V8L14 2M18 20H6V4H13V9H18V20M12.9 14.5L15.8 19H14L12 15.6L10 19H8.2L11.1 14.5L8.2 10H10L12 13.4L14 10H15.8L12.9 14.5Z"
        label=""
      >
        <div
          class="root"
          data-file=""
          data-z-form-card-item=""
        >
          <div
            class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-text-field--placeholder v-file-input"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
                style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
              >
                <fieldset
                  aria-hidden="true"
                >
                  <legend
                    style="width: 0px;"
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
                <div
                  class="v-text-field__slot"
                >
                  <label
                    class="v-label v-label--active theme--light"
                    style="left: 0px; position: absolute;"
                  >
                    ファイル *
                  </label>
                  <div
                    class="v-file-input__text"
                  >
                    dummy.xlsx (12.3 kB)
                  </div>
                  <input
                    accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                    type="file"
                  />
                </div>
                <div
                  class="v-input__append-inner"
                >
                  <div
                    class="v-input__icon v-input__icon--clear"
                  >
                    <button
                      aria-label="clear icon"
                      class="v-icon notranslate v-icon--link mdi mdi-close theme--light"
                      type="button"
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </z-form-card-item-set-stub>
      <div
        class="root"
        data-z-action-button=""
      >
        <a
          class="font-weight-bold white--text v-btn-stub"
          color="primary"
          depressed=""
          type="submit"
        >
          <v-icon-stub
            left=""
          >
            M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z
          </v-icon-stub>
          <span>
            アップロード
          </span>
        </a>
      </div>
      <div
        class="z-form-card-stub-slot-header"
      />
    </div>
  </div>
</form>
`;

exports[`z-shift-upload-form.vue should not display errors when props.value updated 1`] = `
<form
  class="v-form"
  data-form=""
  novalidate="novalidate"
>
  <div>
    <div
      class="z-form-card-stub"
      title="一括登録（アップロード）"
    >
      <div
        class="z-form-card-stub-slot-actions"
      />
      <z-form-card-item-set-stub
        icon=""
        label=""
        noicon="true"
      >
        <p>
          勤務シフトを記入したエクセルファイルを選択し《アップロード》ボタンを押してください。
        </p>
      </z-form-card-item-set-stub>
      <z-form-card-item-set-stub
        icon="M14 2H6C4.89 2 4 2.9 4 4V20C4 21.11 4.89 22 6 22H18C19.11 22 20 21.11 20 20V8L14 2M18 20H6V4H13V9H18V20M12.9 14.5L15.8 19H14L12 15.6L10 19H8.2L11.1 14.5L8.2 10H10L12 13.4L14 10H15.8L12.9 14.5Z"
        label=""
      >
        <div
          class="root"
          data-file=""
          data-z-form-card-item=""
        >
          <div
            class="v-input v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-text-field--placeholder v-file-input"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
                style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
              >
                <fieldset
                  aria-hidden="true"
                >
                  <legend
                    style="width: 0px;"
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
                <div
                  class="v-text-field__slot"
                >
                  <label
                    class="v-label theme--light"
                    style="left: 0px; position: absolute;"
                  >
                    ファイル *
                  </label>
                  <div
                    class="v-file-input__text v-file-input__text--placeholder"
                  />
                  <input
                    accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                    type="file"
                  />
                </div>
                <div
                  class="v-input__append-inner"
                >
                  <div />
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </z-form-card-item-set-stub>
      <div
        class="root"
        data-z-action-button=""
      >
        <a
          class="font-weight-bold white--text v-btn-stub"
          color="primary"
          depressed=""
          type="submit"
        >
          <v-icon-stub
            left=""
          >
            M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z
          </v-icon-stub>
          <span>
            アップロード
          </span>
        </a>
      </div>
      <div
        class="z-form-card-stub-slot-header"
      />
    </div>
  </div>
</form>
`;
